# FlappyBird

./: .gitignore  CMakeLists.txt  mingw-toolchain.cmake
build-linux-asan/: Makefile  cmake_install.cmake
include/glad/: glad.h
src/: Application.cpp  Application.h  Bird.cpp  Bird.h  Button.cpp  Button.h  ButtonVertexShader.glsl  Collision.cpp  Collision.h  InputManager.cpp  InputManager.h  Menu.cpp  Menu.h  Pillar.cpp  Pillar.h  PillarPair.cpp  PillarPair.h  Pillars.cpp  Pillars.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  TextRendererFragment.glsl  TextRendererVertex.glsl  birdFragmentShader.glsl  birdVertexShader.glsl  glad.c  main.cpp  menuFragmentShader.glsl  menuVertexShader.glsl  pillarFragmentShader.glsl  pillarVertexShader.glsl
